--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,18 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>goit-js-hw-11</title>
-  <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-  <load="partials /header.html" />
 
-  <section>
-    <h1>Example page title</h1>
-    <!-- Path to images as from index.html file -->
-    <img src="./img/javascript.svg" alt="" />
-  </section>
+  <form class="js-form">
+    <input type="text" name="search" placeholder="search images...">
+    <button type="submit">Search</button>
+  </form>
 
-  <!-- Loads the specified .html file -->
-  <load="partials /vite-promo.html" />
+  <ul class="gallery js-gallery"></ul>
+  <span class="loader is-hidden"></span>
 
   <script type="module" src="./main.js"></script>
 </body>
